tests/NormalTests/paczka1/small_fuzzy/91785479.err
Error in line 1: DOv2VBzkRP A809 37,6
Error in line 15: CSJAx A559 151,0
